--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <!--main-->
     <div class="bg-white h-96 max-w-screen mx-16  mt-16 rounded-xl">
         <div class="flex">
-            <img class="rounded-full w-72 h-72 m-12  " src="profile.jpg" >
+            <img class="rounded-full w-72 h-72 m-12  " src="image\profile.jpg" >
             <table class="m-12">
                 <thead>
                   <tr>
