--- a/experence.html
+++ b/experence.html
@@ -22,7 +22,7 @@
 <!--block 1-->
             <div class="bg-white max-w-screen-md mx-auto shadow-lg rounded-xl ring-1 ring-gray-300 mb-4">
                 <div class="flex p-1">
-                    <img class="w-36 h-36 rounded-xl" src="sh.jpg">
+                    <img class="w-36 h-36 rounded-xl" src="image\sh.jpg">
                     <!-- header and description -->
                     <div class="p-4">
                         <p class="font-semibold"> Design competition!! </p>
@@ -39,7 +39,7 @@
 <!--block 2-->
             <div class="bg-white max-w-screen-md mx-auto shadow-lg rounded-xl ring-1 ring-gray-300 mb-4">
                 <div class="flex p-1">
-                    <img class="w-36 h-36 rounded-xl" src="ดาวน์โหลด.png">
+                    <img class="w-36 h-36 rounded-xl" src="image\ดาวน์โหลด.png">
                     <!-- header and description -->
                     <div class="p-4">
                         <p class="font-semibold"> Graduated from PRC </p>
@@ -56,7 +56,7 @@
 <!--block 3-->
         <div class="bg-white max-w-screen-md mx-auto shadow-lg rounded-xl ring-1 ring-gray-300 mb-4">
             <div class="flex p-1">
-                <img class="w-36 h-36 rounded-xl " src="meme.jpg">
+                <img class="w-36 h-36 rounded-xl " src="image\meme.jpg">
                 <!-- header and description -->
                 <div class="p-4">
                     <p class="font-semibold"> Just fullfill !! </p>
