--- a/homepage.html
+++ b/homepage.html
@@ -21,7 +21,7 @@
 <!--main-->
 	<div class="space-y-4">
 		<div class="flex p-4 ">
-		<img class="w-44 h-44 rounded-full ml-44 mt-4" src="profile.jpg">
+		<img class="w-44 h-44 rounded-full ml-44 mt-4" src="image\profile.jpg">
 		<div class="p-4">
 			<p class="font-semibold ml-8 mt-4 text-2xl"  > Setsiri matewin </p>
 			<p class="text-sm text-black ml-8 mt-4 text-lg">
@@ -35,7 +35,7 @@
 		<p class="font-semibold mt-20 text-xl text-center underline"  > About me </p>
 		<div class="bg-white max-w-screen-md mx-auto shadow-lg rounded-xl ring-1 ring-gray-300">
 			<div class="flex p-1">
-				<img class="w-36 h-36 rounded-xl" src="onepiece.jpg">
+				<img class="w-36 h-36 rounded-xl" src="image\onepiece.jpg">
 				<div class="p-4">
 					<p class="font-semibold"> Want to be The prirate King !!! </p>
 					<p class="text-sm text-gray-600">
@@ -51,7 +51,7 @@
 		</div>
 		<div class="bg-white max-w-screen-md mx-auto shadow-lg rounded-xl ring-1 ring-gray-300">
 			<div class="flex p-1">
-				<img class="w-36 h-36 rounded-xl" src="mia.jpg">
+				<img class="w-36 h-36 rounded-xl" src="image\mia.jpg">
 				<div class="p-4">
 					<p class="font-semibold"> More info </p>
 					<p class="text-sm text-gray-600">
